Corrected SPARQL statements