@@ -15,3 +15,9 @@ keytool -genkey -keystore vgKeys -alias jcedit
 
 b) sign a jar with a key
 jarsigner -keystore vgKeys xyz.jar jcedit
+
+d) to run the program
+java --add-opens java.base/java.lang=ALL-UNNAMED 
+--add-opens java.base/java.lang.reflect=ALL-UNNAMED 
+--add-opens java.base/java.lang.invoke=ALL-UNNAMED 
+-jar jcedit-5.0-SNAPSHOT.jar
